completed hero nav owl carousel

--- a/src/style/base/_global.scss
+++ b/src/style/base/_global.scss
@@ -66,3 +66,11 @@ mark {
 .bg-white {
 	background-color: white;
 }
+
+.container, .container-fluid {
+    @include media-breakpoint-down(sm) {
+        padding-right: 36px;
+        padding-left: 36px;
+    }
+
+}
