--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -1,5 +1,44 @@
-/* Sections */
+.block__tint-overlay {
+    background-color: #000;
+    opacity: .5;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%
+}
 
+.z-index-1 {
+    z-index: 1
+}
+
+.z-index-100 {
+    z-index: 100
+}
+
+.z-index-500 {
+    z-index: 500
+}
+
+.z-index-900 {
+    z-index: 900
+}
+
+.is-full-height {
+    height: 100vh;
+    min-height: 700px;
+}
+
+
+//
+#hero-slider {
+    @include media-breakpoint-up(lg) {
+        p.lead {
+            max-width: 580px;
+        }
+    }
+}
+
+// ping pong start
 .ping-pong {
 
     padding: 0;
