--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -120,6 +120,10 @@ a {
     font-size: 90%;
 }
 
+.text-grey {
+    color: $grey !important;
+}
+
 .list-unstyled li {
     padding-bottom: .25rem;
 
