--- a/src/style/base/_global.scss
+++ b/src/style/base/_global.scss
@@ -5,6 +5,7 @@
 // Reset
 html {
     height: 100%;
+    min-width: 320px;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
     height: 100%;
     background: $white;
     overflow-x: hidden;
+    min-width: 320px;
 }
 
 body.css-loaded {
