--- a/src/style/layouts/_header.scss
+++ b/src/style/layouts/_header.scss
@@ -16,8 +16,9 @@
         outline: none;
         border: none;
         padding: .75rem;
-        position: relative;
-        z-index: 9997;
+        position: absolute;
+        right: 0;
+        z-index: 9999;
 
         .fa-bars {
             color: white;
@@ -30,18 +31,12 @@
         width: 126px;
         height: auto;
         position: relative;
-        z-index: 9999;
+        z-index: 1002;
         padding-top: $spacer/4;
         @include media-breakpoint-up(lg) {
             padding-top: 0;
             width: 168px;
         }
-    }
-
-    .mainnav,
-    .mainnav-m {
-        position: relative;
-        z-index: 9998;
     }
 
     .bar {
@@ -137,39 +132,45 @@ a.social-link {
     }
 }
 
-.home {
-    #header {
+#header {
 
-        @include media-breakpoint-up(lg) {
-            height: 100vh;
-            min-height: 45rem;
-            position: absolute;
-            border: 1px solid red;
-        }
-
-        nav {
-            position: absolute;
-            width: 100%;
-            z-index: 1001;
-        }
-
-
+    @include media-breakpoint-up(lg) {
+        height: 100vh;
+        min-height: 45rem;
+        position: absolute;
+        border: 1px solid red;
     }
+
+    nav {
+        position: absolute;
+        width: 100%;
+        z-index: 1001;
+    }
+
+
 }
 
 #mobile-nav {
+    opacity: 0;
     background-color: rgba($dark, .85);
-    position: absolute;
+    position: absolute !important;
     top: 0;
     left: 0;
     width: 100%;
+    height: 100vh;
+    z-index: 1002;
+
+    transition: opacity 0.15s ease-in;
 
     ul#main-menu {
         margin-top: $spacer*4;
     }
 
-    .nav-link {
-        padding-bottom: $spacer*.75;
+    @media (min-height: 500px) {
+        .nav-link {
+            padding-bottom: $spacer*.75;
+        }
+
     }
 
 
@@ -184,6 +185,7 @@ a.social-link {
         }
     }
 
+
     a.social-link {
         margin-top: $spacer;
         width: 40px;
@@ -192,4 +194,8 @@ a.social-link {
             margin-left: 0;
         }
     }
+}
+
+#mobile-nav.show {
+    opacity: 1;
 }
