--- a/src/style/components/_owl.scss
+++ b/src/style/components/_owl.scss
@@ -226,47 +226,99 @@ $dot-background-active: $color-base !default;
 }
 
 
-// overrides
-.owl-theme .owl-dots {
-    position: absolute;
-    bottom: $spacer*4;
-    left: 0;
-    right: 0;
-    @extend .container;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-@include media-breakpoint-up(md) {
-    .owl-theme .owl-dot {
-        color: white;
-        font-size: 13px;
-        font-weight: bold;
-        width: 30%;
-        width: calc(33.3333% - 36px);
-        margin-right: 36px;
-        text-align: left;
-        padding-bottom: $spacer*.75;
-        border-bottom: 1px solid rgba(white, .3);
-        position: relative;
-    }
-
-    .owl-theme .owl-dot.active.animate:before {
-        content: '';
+//dot-data sliders
+#hero-slider, .js-tiptopSlider {
+    &.owl-theme .owl-dots {
         position: absolute;
+        bottom: $spacer*4;
         left: 0;
-        bottom: 0;
-        width: 0;
-        border-bottom: solid 1px white;
-        animation: border_anim 9s linear forwards;
+        right: 0;
+        @extend .container;
+        margin-left: auto;
+        margin-right: auto;
     }
 
-    @keyframes border_anim {
-        0% {
-            width: 0%;
+    @include media-breakpoint-up(md) {
+        &.owl-theme .owl-dot {
+            color: white;
+            font-size: 13px;
+            font-weight: bold;
+            width: 30%;
+            width: calc(33.3333% - 36px);
+            margin-right: 36px;
+            text-align: left;
+            padding-bottom: $spacer*.75;
+            border-bottom: 2px solid rgba(white, .3);
+            position: relative;
         }
-        100% {
+
+        &.owl-theme .owl-dot.active.animate:before {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -2px;
+            width: 0;
+            border-bottom: solid 2px white;
+            animation: border_anim 9s linear forwards;
+        }
+
+    }
+}
+.tiptopSlider {
+    .tt-dots {
+        @include media-breakpoint-up(md) {
+            display: flex;
             width: 100%;
         }
     }
+    .tt-dots .owl-dot {
+        color: $dark;
+        font-size: 13px;
+        font-weight: bold;
+        margin-right: 36px;
+        text-align: left;
+        padding-bottom: $spacer*.75;
+        border-bottom: 2px solid #e3e3e8;
+        position: relative;
+        cursor: pointer;
+        max-width: 100%;
+        margin-bottom: $spacer/2;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        @include media-breakpoint-up(md) {
+            flex-basis: 0;
+            flex-grow: 1;
+            margin-bottom: 0;
+        }
+
+        &.active.animate:before {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -2px;
+            width: 0;
+            border-bottom: solid 2px #374377;
+            @include media-breakpoint-down(md) {
+                width: 100%;
+            }
+            @include media-breakpoint-up(md) {
+                animation: border_anim 11s linear forwards;
+            }
+        }
+
+    }
 }
+
+@keyframes border_anim {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 100%;
+    }
+}
+
+
