added custom services slider and content modules

--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -168,6 +168,16 @@
     }
 }
 
+.card-stack {
+    .col-100-container {
+        display: table;
+        height: 100%;
+    }
+    .col-100 {
+        display: table-cell;
+    }
+}
+
 //testimonials
 
 #testimonials {
