marketing team ready pages: homepage, cutom homes and cabana kits

--- a/src/style/layouts/_content.scss
+++ b/src/style/layouts/_content.scss
@@ -42,7 +42,13 @@
         column-count: 2;
         column-gap: $spacer*4.25;
     }
-
+}
+.column-break {
+    @include media-breakpoint-up(lg) {
+        page-break-before:always;
+        break-before: always;
+        display: inline-grid;
+    }
 }
 
 .hide-overflow {
